@@ -1,5 +1,11 @@
 2008-11-14  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/examples/list_contacts/main.c: Examine the actual contacts 
+	handles as before rather than the handle for the list of contacts.
+	This now works.
+
+2008-11-14  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/examples/list_contacts/main.c: Use the new TpContacts API 
 	instead, which seems much simpler than all that channel stuff.
 	However, this currently gives this GError:
